infrastructure/modules/cp/sg.tf
# --- ECS Node SG ---

resource "aws_security_group" "ecs_node_sg" {
  name_prefix = "${var.app_name}-ecs-node-sg"
  vpc_id      = var.vpc_id

 egress {
    description = "Allow all egress traffic"
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description     = "Allow ingress traffic from ALB on HTTP on ephemeral ports"
    from_port       = 1024
    to_port         = 65535
    protocol        = "tcp"
    security_groups = [var.alb_sg_id]
  }

  ingress {
    description     = "Allow SSH ingress traffic from bastion host"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [var.bastion_host_sg_id]
  }

  #this is temporary for debugging ONLY
  ingress {
    description = "Allow all igress traffic"
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

}
